clusters/main/kubernetes/apps/authentik-upstream/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: authentik-upstream
spec:
  rules:
  - host: "grafana.${DOMAIN_0}"
    http:
      paths:
        - path: /outpost.goauthentik.io
          pathType: Prefix
          backend:
            service:
              name: ak-outpost-authentik-embedded-outpost
              port:
                number: 9000
